--- a/Frontend/henon-dashboard/package.json
+++ b/Frontend/henon-dashboard/package.json
@@ -21,7 +21,8 @@
     "chartjs-plugin-crosshair": "^2.0.0",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-spinners": "^0.13.8"
   },
   "devDependencies": {
     "@types/axios": "^0.14.0",
