update paths that trigger the workflows and fix install step backend pipeline

--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -6,6 +6,8 @@ on:
   push:
     branches:
       - main
+    paths:
+      - "Frontend/**"
 jobs:
   Deploy-Production:
     runs-on: ubuntu-latest
