--- a/.github/workflows/backend-cicd.yaml
+++ b/.github/workflows/backend-cicd.yaml
@@ -2,6 +2,8 @@ name: Backend CI/CD
 on:
   push:
     branches: main
+    paths:
+      - "Backend/**"
 
 jobs:
   build-and-test:
@@ -20,6 +22,7 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
+        working-directory: ./Backend
 
       - name: Run tests
         run: |
