--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -8,6 +8,8 @@ on:
       - main
     paths:
       - "Frontend/**"
+  workflow_dispatch:
+
 jobs:
   Deploy-Production:
     runs-on: ubuntu-latest
