add kubernetes frontend manifests

--- a/Frontend/henon-dashboard/Dockerfile
+++ b/Frontend/henon-dashboard/Dockerfile
@@ -3,6 +3,8 @@ WORKDIR /app
 COPY package.json package-lock.json ./
 RUN npm ci
 COPY . .
+ARG VITE_BACKEND_URL
+ENV VITE_BACKEND_URL=$VITE_BACKEND_URL
 RUN npm run build
 
 FROM nginx:alpine
